--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">UTS Muhammad Rafliansyah</string>
+    <string-array name="arr_JalurPendaftaran">
+        <item>Jalur Tanpa Tes</item>
+        <item>Jalur Tes Tertulis</item>
+        <item>Jalur Tes Wawancara</item>
+        <item>Rekomendasi</item>
+    </string-array>
+
 </resources>
